# opendut

./: .ansible-lint  .dockerignore  .editorconfig  .gitattributes  .gitguardian.yml  .gitignore  .secretscanner-false-positives.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  cluster-test.sh  deny.toml  flake.nix  rust-toolchain.toml
.ci/cargo-ci/: Cargo.toml  README.md  build.rs
.ci/cargo-ci/src/: main.rs
.ci/xtask/: Cargo.toml
.ci/xtask/src/: constants.rs  licenses.rs  main.rs  metadata.rs  util.rs
opendut-carl/: Cargo.toml  build.rs  carl-development.toml  carl.toml
opendut-carl/opendut-carl-api/: Cargo.toml  Makefile.toml  build.rs
opendut-carl/opendut-carl-api/src/: lib.rs
opendut-carl/src/: cli.rs  lib.rs  main.rs  metrics.rs  multiplex_service.rs  settings.rs
opendut-carl/src/actions/: clusters.rs  mod.rs  peers.rs
opendut-carl/src/auth/: authorization.rs  grpc_auth_layer.rs  in_memory_cache.rs  json_web_key.rs  mod.rs  validation.rs
opendut-carl/src/cluster/: manager.rs
opendut-carl/src/grpc/: cluster_manager.rs  metadata_provider.rs  mod.rs  peer_manager.rs  peer_messaging_broker.rs
opendut-carl/src/handler/: cleo.rs
opendut-carl/src/http/: mod.rs  state.rs  tests.rs
opendut-carl/src/manager/: cluster_manager.rs  mod.rs  observer_messaging_broker.rs  peer_messaging_broker.rs
opendut-carl/src/peer/: auth.rs  broker.rs  mod.rs  oidc_client_manager.rs
opendut-carl/src/persistence/: mod.rs
opendut-carl/src/provisioning/: cleo.rs  cleo_script.rs  mod.rs
opendut-carl/src/resource/: ids.rs  manager.rs  mod.rs  resource.rs  subscription.rs  transaction.rs
opendut-carl/src/resources/: es.rs  ids.rs  manager.rs  mod.rs  resource.rs  subscription.rs  transaction.rs
opendut-carl/src/settings/: mod.rs  vpn.rs
opendut-carl/src/startup/: grpc.rs  http.rs  metrics.rs  migration.rs  mod.rs  postgres_migration.rs  tls.rs
opendut-carl/src/util/: mod.rs
opendut-carl/src/vpn/: mod.rs
opendut-cleo/: Cargo.toml  cleo-development.toml  cleo.toml  example.yaml
opendut-cleo/src/: main.rs
opendut-cleo/src/commands/: apply.rs  cleo_setup.rs  cluster_configuration.rs  cluster_deployment.rs  completions.rs  decode_peer_setup.rs  decode_setup_string.rs  device.rs  executor.rs  generate_peer_setup.rs  generate_setup_string.rs  mod.rs  network_configuration.rs  network_interface.rs  peer.rs  setup.rs
opendut-cleo/src/parse/: cluster.rs  mod.rs
opendut-edgar/: Cargo.toml  edgar-development.toml  edgar.toml
opendut-edgar-plugin-api/: Cargo.toml
opendut-edgar-plugin-api/src/: host.rs  lib.rs  plugin.rs
opendut-edgar-plugin-api/wit/: world.wit
opendut-edgar/netbird-client-api/: Cargo.toml  build.rs
opendut-edgar/netbird-client-api/src/: client.rs  error.rs  extension.rs  lib.rs
opendut-edgar/opendut-edgar-kernel-modules/: Cargo.toml
opendut-edgar/opendut-edgar-kernel-modules/src/: lib.rs
opendut-edgar/plugin-api/: Cargo.toml
opendut-edgar/plugin-api/src/: host.rs  plugin.rs
opendut-edgar/plugin-api/test-plugins/: Cargo.toml  README.md  build-distribution.sh  plugins.txt
opendut-edgar/restbus-simulation/: Cargo.toml  arxml_parser.rs  arxml_structs.rs  arxml_utils.rs
opendut-edgar/restbus-simulation/src/: arxml_parser.rs  arxml_structs.rs  arxml_utils.rs  lib.rs  main.rs  restbus_simulation.rs  restbus_structs.rs  restbus_utils.rs
opendut-edgar/src/: cli.rs  lib.rs  main.rs
opendut-edgar/src/common/: carl.rs  mod.rs  settings.rs
opendut-edgar/src/service/: can_manager.rs  cannelloni_manager.rs  cluster_assignment.rs  executor.rs  mod.rs  peer_configuration.rs  peer_messaging_client.rs  process_manager.rs  start.rs  test_executor.rs
opendut-edgar/src/setup/: cli.rs  constants.rs  mod.rs  plugin_bindgen.rs  plugin_runtime.rs  runner.rs  setup_plugin.rs  start.rs  task.rs  util.rs  write_configuration.rs
opendut-flash/: Cargo.toml  README.md
opendut-flash/src/: main.rs
opendut-flash/src/raspberry_pi/: image.rs  mod.rs  script.rs
opendut-lea/: Cargo.toml  Trunk.toml  index.html
opendut-lea/assets/style/: base.scss  doorhanger.scss  health-light.scss  nav-flyout.scss  panel-ghost.scss  profile-doorhanger.scss  profile-dropdown.scss  theme.scss  toast.scss  toggle.scss  tooltip.scss  util.scss
opendut-lea/opendut-lea-components/: Cargo.toml
opendut-lea/opendut-lea-components/src/: breadcrumbs.rs  doorhanger.rs  health.rs  icon_text.rs  lib.rs  loading_spinner.rs  page.rs  tabs.rs  toggle.rs  tooltip.rs
opendut-lea/opendut-lea-core/: Cargo.toml
opendut-lea/opendut-lea-core/src/: lib.rs
opendut-lea/src/: app.rs  main.rs  nav.rs  routing.rs  util.rs
opendut-lea/src/about/: mod.rs  overview.rs
opendut-lea/src/api/: mod.rs
opendut-lea/src/cleo/: mod.rs  setup.rs
opendut-lea/src/clusters/: card.rs  mod.rs  overview.rs
opendut-lea/src/components/: auth.rs  authenticated.rs  breadcrumbs.rs  doorhanger.rs  (+9 more)
opendut-model/: Cargo.toml  build.rs
opendut-model/src/: id.rs  lib.rs  resources.rs
opendut-resources/: Cargo.toml
opendut-resources/opendut-resources-derive/: Cargo.toml
opendut-resources/opendut-resources-tests/: Cargo.toml
opendut-resources/src/: lib.rs  testkit.rs
opendut-telemetry/: Cargo.toml
opendut-telemetry/src/: lib.rs  opentelemetry_types.rs
opendut-types/: Cargo.toml  build.rs
opendut-types/src/: lib.rs  resources.rs
opendut-util/: Cargo.toml
opendut-util/opendut-auth/: Cargo.toml
opendut-util/opendut-util-core/: Cargo.toml
opendut-util/opendut-util-telemetry/: Cargo.toml
opendut-util/src/: app_info.rs  client_auth.rs  crypto.rs  kernel_modules.rs  lib.rs  logging.rs  project.rs  proto.rs  serde.rs  settings.rs
opendut-viper/: Cargo.toml  LICENSE  README.md  deny.toml  flake.nix  rust-toolchain.toml
opendut-viper/example/: Cargo.toml
opendut-viper/viper-cli/: Cargo.toml
opendut-viper/viper-py/: Cargo.toml
opendut-viper/viper-rt/: Cargo.toml  build.rs
opendut-vpn/: Cargo.toml
opendut-vpn/opendut-vpn-netbird/: Cargo.toml
opendut-vpn/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs  peer_configuration.rs  register.rs  util.rs
(+1466 files in other folders)
