[workspace]
members = [
    "opendut-carl",
    "opendut-carl/opendut-carl-api",
    "opendut-cleo",
    "opendut-edgar",
    "opendut-edgar/netbird-client-api",
    "opendut-edgar/opendut-edgar-kernel-modules",
    "opendut-edgar/plugin-api",
    "opendut-flash",
    "opendut-lea",
    "opendut-types",
    "opendut-util",
    "opendut-util/opendut-auth",
    "opendut-util/opendut-auth/opendut-auth-tests",
    "opendut-util/opendut-util-core",
    "opendut-vpn",
    "opendut-vpn/opendut-vpn-netbird",
    ".ci/cargo-ci",
    ".ci/docker/theo",
    "tests",
]
resolver = "3"

[workspace.package]
version = "0.7.0-alpha"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/eclipse-opendut/opendut"

[workspace.dependencies]
opendut-auth = { path = "opendut-util/opendut-auth" }
opendut-auth-tests = { path = "opendut-util/opendut-auth/opendut-auth-tests" }
opendut-carl = { path = "opendut-carl" }
opendut-carl-api = { path = "opendut-carl/opendut-carl-api" }
opendut-ci = { path = ".ci/cargo-ci" }
opendut-edgar = { path = "opendut-edgar" }
opendut-edgar-plugin-api = { path = "opendut-edgar/plugin-api" }
opendut-netbird-client-api = { path = "opendut-edgar/netbird-client-api" }
opendut-edgar-kernel-modules = { path = "opendut-edgar/opendut-edgar-kernel-modules" }
opendut-flash = { path = "opendut-flash" }
opendut-vpn-netbird = { path = "opendut-vpn/opendut-vpn-netbird" }
opendut-types = { path = "opendut-types" }
opendut-theo = { path = ".ci/docker/theo" }
opendut-util = { path = "opendut-util" }
opendut-util-core = { path = "opendut-util/opendut-util-core" }
opendut-vpn = { path = "opendut-vpn" }

anyhow = "1.0.95"
assert_fs = "1.1.2"
async-trait = "0.1.86"
axum = "0.7.5"
axum-server = "0.7.1"
axum-server-dual-protocol = "0.7.0"
backon = { version = "1.3.0" }
base64 = "0.22.1"
brotli = "7.0.0"
cargo_metadata = "0.19.1"
cargo_toml = "0.22.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.39", default-features = false }
cicero = "0.3.0"
clap = "4.5.28"
clap_complete = "4.5.44"
cli-table = "0.4"

# Waiting for yaml-rust2 dependency in config crate to be released: https://github.com/mehcode/config-rs/issues/563
config = { git = "https://github.com/mehcode/config-rs", rev = "e3c1d0b452639478662a44f15ef6d5b6d969bf9b", default-features = false, features = ["toml", "yaml"] }
#config = { version = "0.14.0", default-features = false, features = ["toml", "yaml"] }
console = "0.15.10"
console_error_panic_hook = "0.1.7"
ctrlc = "3.4.5"
digest = "0.10.7"
dotenvy = "0.15.7"
flate2 = "1.0.35"
fs-err = "3.1.0"
fs_extra = "1.3.0"
futures = "0.3.31"
glob = "0.3.2"
gloo-net = { version = "0.6.0" }
gloo-timers = { version = "0.3.0" }
googletest = { version = "0.13.0" }
home = "0.5.11"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1.6.0"
hyper-util = "0.1.10"
indicatif = "0.17.11"
indoc = "2.0.6"
jsonwebtoken = "9.3.0"
leptos = { version = "0.7.5" }
leptos_oidc = { git = "https://gitlab.com/opendut/leptos_oidc", branch = "upgrade-leptos-0.7" }
leptos_router = { version = "0.7.5" }
leptos-use = { version = "0.15.5" }
mime = "0.3.17"
mockall = "0.13.1"
netlink-packet-route = "0.19.0"
netlink-packet-utils = "0.5.2"
nix = "0.29.0"
oauth2 = { version = "5.0.0", default-features = false }
openidconnect = { version = "4.0.0", default-features = false }
openssl-sys = { version = "0.9.105", features = ["vendored"] }
opentelemetry = "0.27.1"
opentelemetry-appender-tracing = "0.27.0"
opentelemetry-otlp = "0.27.0"
opentelemetry_sdk = "0.27.1"
opentelemetry-semantic-conventions = "0.27.0"
pem = { version = "3.0.4", features = ["serde"] }
phf = { version = "0.11", features = ["macros"] }
ping-rs = { version = "0.1.2" }
predicates = "3.1.3"
prost = "0.13.4"
prost-build = "0.13.4"
prost-types = "0.13.4"
protobuf-src = "1.1.0"
reactive_stores = "0.1.5"
reactive_stores_macro = "0.1.5"
redb = "2.4.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots"] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
rstest = "0.25.0"
rtnetlink = "0.14.1"
rustls = { version = "*", default-features = false, features = ["ring"] }
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde-spdx = "0.9.1"
serde_yaml = "0.9.34"
shadow-formatted-version = "1.0.0"
shadow-rs = { version = "0.38.0", default-features = false }
sha1 = "0.10.6"
sha2 = "0.10.8"
simple_moving_average = "1.0.2"
slotmap = { version = "1.0.7" }
strum = "0.27.1"
sudo = "0.6.0"
sysinfo = "0.33.1"
tar = "0.4.43"
task-local-extensions = "0.1.4"
tempfile = "3.16.0"
test-with = { version = "0.14.7", default-features = false }
test-log = { version = "0.2.17", default-features = false, features = ["trace", "color"] }
time = "0.3.37"
thiserror = "2.0.11"
tokio = { version = "1.43.0", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
toml_edit = "0.22.23"
tonic = { version = "0.12.3", default-features = false }
tonic-build = { version = "0.12.3", default-features = false }
tonic-web = "0.12.3"
tonic-web-wasm-client = { version = "0.6.1" }
tonic-async-interceptor = { version = "0.12.0" }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = { version = "0.1.41" }
tracing-opentelemetry = "0.28.0"
tracing-subscriber = { version = "0.3.19", default-features = false }
tracing-web = { version = "0.1.3" }
url = "2.5.4"
uuid = "1.13.1"
walkdir = "2.5.0"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
wasmtime = { version= "29.0.1", features = ["component-model", "std", "runtime"] }
wasmtime-wasi = "29.0.1"
which = "7.0.2"
wit-bindgen = "0.39.0"
zip = "2.4.1"


[workspace.metadata.ci]
cannelloni.version = "1.1.0"  # mind that this version string is partially hard-coded in the repo

# download netbird client release from here
netbird.repository = "https://github.com/eclipse-opendut/netbird-build"
# with the following version
netbird.version = "0.28.9-a2f1d0dd1405c1c219454b0c74bd6fdf19297205"
# and use the protobuf definition for the netbird client service daemon from here (possible separate location to be configured)
netbird.protobuf = "https://github.com/eclipse-opendut/netbird-build/releases/download/v0.28.9-a2f1d0dd1405c1c219454b0c74bd6fdf19297205/daemon.proto"

netbird-signal.version="0.28.9"       # docker container version for netbirdio/signal:     NETBIRD_SIGNAL_VERSION
netbird-management.version="0.28.9"   # docker container version for netbirdio/management: NETBIRD_MANAGEMENT_VERSION
netbird-dashboard.version="v2.5.0"    # docker container version for netbirdio/dashboard:  NETBIRD_DASHBOARD_VERSION

rperf.version = "0.1.8"

[workspace.metadata.cicero.commands.dependencies] #CLI tool crates used in CI (not libraries)
cargo-bundle-licenses = "4.0.0"
cargo-deny = "0.18.2"
cargo-sbom = "0.9.1"
cargo-tarpaulin = "0.32.2"
cross = "0.2.5"
diesel_cli = "2.2.4"
mdbook = "0.4.42"
mdbook-plantuml = "0.8.0"
trunk = "0.21.13"

[workspace.lints.clippy]
unnecessary_lazy_evaluations = "allow"
