[workspace]
members = [
    "opendut-carl",
    "opendut-carl/opendut-carl-api",
    "opendut-cleo",
    "opendut-edgar",
    "opendut-edgar/netbird-client-api",
    "opendut-edgar/opendut-edgar-kernel-modules",
    "opendut-edgar/plugin-api",
    "opendut-lea",
    "opendut-lea/opendut-lea-components",
    "opendut-model",
    "opendut-util",
    "opendut-util/opendut-auth",
    "opendut-util/opendut-auth/opendut-auth-tests",
    "opendut-util/opendut-util-core",
    "opendut-vpn",
    "opendut-vpn/opendut-vpn-netbird",
    ".ci/cargo-ci",
    ".ci/docker/theo",
    "tests",
]
resolver = "3"

[workspace.package]
version = "0.8.0-alpha"
edition = "2024"
rust-version = "1.85"  # Minimum supported version
license = "Apache-2.0"
repository = "https://github.com/eclipse-opendut/opendut"

[workspace.dependencies]
opendut-auth = { path = "opendut-util/opendut-auth" }
opendut-auth-tests = { path = "opendut-util/opendut-auth/opendut-auth-tests" }
opendut-carl = { path = "opendut-carl" }
opendut-carl-api = { path = "opendut-carl/opendut-carl-api" }
opendut-ci = { path = ".ci/cargo-ci" }
opendut-edgar = { path = "opendut-edgar" }
opendut-edgar-plugin-api = { path = "opendut-edgar/plugin-api" }
opendut-edgar-kernel-modules = { path = "opendut-edgar/opendut-edgar-kernel-modules" }
opendut-lea-components = { path = "opendut-lea/opendut-lea-components" }
opendut-netbird-client-api = { path = "opendut-edgar/netbird-client-api" }
opendut-model = { path = "opendut-model" }
opendut-theo = { path = ".ci/docker/theo" }
opendut-util = { path = "opendut-util" }
opendut-util-core = { path = "opendut-util/opendut-util-core" }
opendut-vpn = { path = "opendut-vpn" }
opendut-vpn-netbird = { path = "opendut-vpn/opendut-vpn-netbird" }

anyhow = "1.0.95"
assert_fs = "1.1.2"
async-trait = "0.1.86"
axum = "0.8.4"
axum-server = "0.7.1"
axum-server-dual-protocol = "0.7.0"
backon = "1.3.0"
base64 = "0.22.1"
bitflags = "2.9.0"
brotli = "8.0.1"
byteorder = "1.5.0"
cargo_metadata = "0.22.0"
cargo_toml = "0.22.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.39", default-features = false }
cicero = "0.4.1"
clap = "4.5.28"
clap_complete = "4.5.44"
cli-table = "0.5"
config = { version = "0.15.11", default-features = false, features = ["toml", "yaml"] }
console = "0.16.0"
console_error_panic_hook = "0.1.7"
const_format = "0.2"
ctrlc = "3.4.5"
digest = "0.10.7"
dotenvy = "0.15.7"
flate2 = "1.0.35"
fs-err = "3.1.0"
fs_extra = "1.3.0"
futures = "0.3.31"
glob = "0.3.2"
gloo-net = "0.6.0"
gloo-timers = "0.3.0"
googletest = "0.14.0"
home = "0.5.11"
http = "1.2.0"
http-body = "1.0.1"
http-body-util = "0.1.2"
hyper = "1.6.0"
hyper-util = "0.1.10"
indicatif = "0.18.0"
indoc = "2.0.6"
jsonwebtoken = "9.3.0"
leptos = "0.8.8"
leptos_oidc = "0.9.0"
leptos_router = "0.8.6"
leptos-use = "0.16.2"
mime = "0.3.17"
mockall = "0.13.1"
nix = "0.30.1"
oauth2 = { version = "5.0.0", default-features = false }
openidconnect = { version = "4.0.0", default-features = false }
openssl-sys = { version = "*", features = ["vendored"] }
opentelemetry = "0.30.0"
opentelemetry-appender-tracing = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry_sdk = "0.30.0"
opentelemetry-semantic-conventions = "0.30.0"
pem = { version = "3.0.4", features = ["serde"] }
phf = { version = "0.13.1", features = ["macros"] }
ping-rs = "0.1.2"
predicates = "3.1.3"
prost = "0.13.4"
prost-build = "0.13.4"
prost-types = "0.13.4"
protobuf-src = "1.1.0"
rand = "0.9.1"
reactive_stores = "0.2.5"
reactive_stores_macro = "0.2.6"
redb = "2.6.3"
regex = "1.11.1"
reqwest = { version = "0.12.12", default-features = false, features = ["rustls-tls-native-roots"] }
reqwest-middleware = "0.4.0"
reqwest-retry = "0.7.0"
rstest = "0.26.1"
rtnetlink = "0.18.0"
rustls = { version = "*", default-features = false, features = ["ring"] }
semver = "1.0"
serde = { version = "1.0", default-features = false }
serde_json = "1.0"
serde-spdx = "0.10.0"
serde_yaml = "0.9.34"
shadow-formatted-version = "1.1.0"
shadow-rs = { version = "1.1.1", default-features = false }
sha1 = "0.10.6"
sha2 = "0.10.8"
simple_moving_average = "1.0.2"
slotmap = "1.0.7"
strum = "0.27.1"
sudo = "0.6.0"
sysinfo = "0.37.0"
tar = "0.4.43"
task-local-extensions = "0.1.4"
tempfile = "3.16.0"
test-with = { version = "0.15.4", default-features = false }
test-log = { version = "0.2.17", default-features = false, features = ["trace", "color"] }
time = "0.3.37"
thiserror = "2.0.11"
tokio = { version = "1.43.0", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
toml_edit = "0.23.4"
tonic = { version = "0.13.1", default-features = false }
tonic-build = { version = "0.13.1", default-features = false }
tonic-web = "0.13.1"
tonic-web-wasm-client = "0.7.1"
tonic-async-interceptor = "0.13.0"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", default-features = false }
tracing-web = "0.1.3"
url = "2.5.4"
uuid = "1.13.1"
walkdir = "2.5.0"
wasm-bindgen-futures = "0.4.50"
wasm-bindgen-test = "0.3.50"
wasmtime = { version= "36.0", features = ["component-model", "std", "runtime"] }
wasmtime-wasi = "36.0"
which = "8.0.0"
wit-bindgen = "0.45"
zip = "4.0.0"


[workspace.metadata.ci]
cannelloni.version = "1.1.0"  # mind that this version string is partially hard-coded in the repo

# download netbird client release from here
netbird.repository = "https://github.com/eclipse-opendut/netbird-build"
# with the following version
netbird.version = "0.28.9-a2f1d0dd1405c1c219454b0c74bd6fdf19297205"
# and use the protobuf definition for the netbird client service daemon from here (possible separate location to be configured)
netbird.protobuf = "https://github.com/eclipse-opendut/netbird-build/releases/download/v0.28.9-a2f1d0dd1405c1c219454b0c74bd6fdf19297205/daemon.proto"

netbird-signal.version="0.28.9"       # docker container version for netbirdio/signal:     NETBIRD_SIGNAL_VERSION
netbird-management.version="0.28.9"   # docker container version for netbirdio/management: NETBIRD_MANAGEMENT_VERSION
netbird-dashboard.version="v2.5.0"    # docker container version for netbirdio/dashboard:  NETBIRD_DASHBOARD_VERSION

rperf.version = "0.1.8"

[workspace.metadata.cicero.commands.dependencies] #CLI tool crates used in CI (not libraries)
cargo-bundle-licenses = "4.0.0"
cargo-deny = "0.18.2"
cargo-sbom = "0.9.1"
cargo-tarpaulin = "0.32.6"
cross = "0.2.5"
mdbook = "0.4.51"
mdbook-plantuml = "0.8.0"
trunk = "0.21.14"

[workspace.lints.clippy]
unnecessary_lazy_evaluations = "allow"
