[package]
name = "opendut-carl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opendut-auth = { workspace = true, features = ["registration_client"] }
opendut-carl-api = { workspace = true }
opendut-vpn-netbird = { workspace = true }
opendut-types = { workspace = true }
opendut-util = { workspace = true, features = ["crypto"] }
opendut-vpn = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
backon = { workspace = true, features = ["tokio-sleep"] }
chrono = { workspace = true }
config = { workspace = true }
diesel = { workspace = true, features = ["postgres", "pq-src", "uuid", "serde_json"] }
diesel_migrations = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
googletest = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
indoc = { workspace = true }
jsonwebtoken = { workspace = true}
mime = { workspace = true }
openidconnect = { workspace = true }
openssl-sys = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pem = { workspace = true, features = ["serde"]}
pin-project-lite = { workspace = true }
pq-sys = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true}
shadow-rs = { workspace = true, default-features = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["default"] }
tonic-web = { workspace = true }
tonic-async-interceptor = { workspace = true }
tower = { workspace = true, features = ["make", "steer"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
predicates = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
test-with = { workspace = true }
rstest = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
opendut-auth-tests = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, default-features = true }

[lints]
workspace = true
