[package]
name = "opendut-carl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
opendut-auth = { workspace = true, features = ["registration_client"] }
opendut-carl-api = { workspace = true }
opendut-vpn-netbird = { workspace = true }
opendut-model = { workspace = true }
opendut-util = { workspace = true, features = ["crypto"] }
opendut-vpn = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
axum-server-dual-protocol = { workspace = true }
backon = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
googletest = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
hyper = { workspace = true }
indoc = { workspace = true }
jsonwebtoken = { workspace = true}
mime = { workspace = true }
openidconnect = { workspace = true }
openssl-sys = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
pem = { workspace = true, features = ["serde"] }
prost = { workspace = true }
redb = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shadow-formatted-version = { workspace = true }
shadow-rs = { workspace = true, default-features = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["full"] }
tonic = { workspace = true, features = ["default"] }
tonic-web = { workspace = true }
tonic-async-interceptor = { workspace = true }
tower = { workspace = true, features = ["make", "steer"] }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
opendut-auth-tests = { workspace = true }
predicates = { workspace = true }
rstest = { workspace = true }
test-log = { workspace = true }
test-with = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
shadow-rs = { workspace = true, default-features = true }

[lints]
workspace = true
