[package]
name = "opendut-edgar"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opendut-carl-api = { workspace = true, features = ["client"] }
opendut-edgar-kernel-modules = { workspace = true }
opendut-netbird-client-api = { workspace = true }
opendut-types = { workspace = true }
opendut-util = { workspace = true, features = ["crypto"] }

anyhow = { workspace = true }
async-trait = { workspace = true }
backon = { workspace = true }
bitflags = { workspace = true }
cfg-if = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true }
console = { workspace = true }
flate2 = { workspace = true }
fs-err = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
indoc = { workspace = true }
# ipnet = { workspace = true }
netlink-packet-route = { workspace = true }
netlink-packet-utils = { workspace = true }
nix = { workspace = true, features = ["user", "fs"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
ping-rs = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rtnetlink = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
shadow-formatted-version = { workspace = true }
shadow-rs = { workspace = true, default-features = true }
sha2 = { workspace = true }
sudo = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml_edit = { workspace = true }
tonic = { workspace = true, features = ["tls-ring"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
url = { workspace = true }
walkdir = { workspace = true }
which = { workspace = true }
zip = { workspace = true }

# Wasmtime is not available for armv7 so plugin support needs to be disabled
# https://docs.wasmtime.dev/stability-tiers.html#unsupported-features-and-platforms
[target.'cfg(not(target_arch = "arm"))'.dependencies]
opendut-edgar-plugin-api = { workspace = true, features = ["host"] }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
googletest = { workspace = true }
predicates = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }
test-with = { workspace = true }
test-log = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true, default-features = true }

[features]
integration_testing = []

[lints]
workspace = true
