[package]
name = "opendut-lea"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opendut-carl-api = { workspace = true, features = ["wasm-client"] }
opendut-types = { workspace = true }

chrono = { workspace = true, features = ["clock", "wasmbind"] }
console_error_panic_hook = { workspace = true }
gloo-net = { workspace = true, features = ["json"]}
gloo-timers = { workspace = true, features = ["futures"] }
jsonwebtoken = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos_router = { workspace = true, features = ["csr"] }
leptos-use = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shadow-rs = { workspace = true, default-features = false, features = ["tzdb"] }
slotmap = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-web-wasm-client = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi"] }
tracing-web = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
leptos_oidc =  { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[lints]
workspace = true
