[package]
name = "opendut-lea"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
opendut-carl-api = { workspace = true, features = ["wasm-client"] }
opendut-auth = { workspace = true, features = ["public_client"] }
opendut-types = { workspace = true }

chrono = { workspace = true, features = ["clock", "wasmbind"] }
console_error_panic_hook = { workspace = true }
gloo-net = { workspace = true, features = ["json"]}
jsonwebtoken = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos_oidc =  { workspace = true }
leptos_router = { workspace = true }
leptos-use = { workspace = true }
reactive_stores = { workspace = true }
reactive_stores_macro = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shadow-rs = { workspace = true, default-features = false, features = ["tzdb"] }
slotmap = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "tracing-log"] }
tracing-web = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
wasm-bindgen-futures = { workspace = true }

[build-dependencies]
shadow-rs = { workspace = true }

[lints]
workspace = true
